fixed menu button spanning full width on mobile browser

--- a/src/sass/_left-rail.scss
+++ b/src/sass/_left-rail.scss
@@ -34,6 +34,10 @@
 	}
 }
 
+body.news .rail--left .arrow-down {
+	display: none;
+}
+
 @include breakpoint($tablet-landscape) {
 	@include with-layout(8) {
 		.rail--left {
